  a JOI-Project and can be used in 'font-family' attributes in the PlayerTextBox.
- Alternate Editor Layouts for different screen sizes and preference.
- Every project can have a default font configured, which is used in the Player.
  This font can be a custom Font type Resource.
- PlayerBackground finally accepts animated images as well. Animated images
  will not be tiled, but instead stretched.
- Changeable Layouts in Player implemented
- New PlayerMediaPlayer features: seek, looping and startAt. Works with Sound and 
  Movie type resources.
- showText can now execute code during the printing of text if it is encased in a 
  <eval></eval> block in html mode.

Changes:
- JOIP-Engine uses PhysFS to allow restricted acces to files only, making it
  impossible to write or read outside of the currently loaded project folder.
- Loading on startup is significantly faster because the logo loads in a
  worker thread.
- Changelog visible in the "About" menu.
- Help has a tree view containing all topics and pages can be searched.
- Code editor allows folding blocks.
- New PlayerMediaPlayer feature: give resources an ID and refer to them in 
  functions via id instead of resource name.
- New PlayerTextBox feature: can set duration of message and skippable flag
  in setText call itself instead of having to call the thread.sleep() method.
  The duration of a message can also be determined automatically with the 
  argument -1 (or any number < 0).

Fixed Bugs:
- Default style is fixed. Qml and icons look no longer broken.
- Application sounds don't cut off when a new sound effect starts playing.
- Metronome honors application settings (muted and volume).
- Help UI works on all screens, not just the primary one.
- UI sound effects don't cut off anymore.
- Performance fixes for title in menu and 404 text.
- Resource view is properly resizable now.
- Old version detection turn off even if the user answers 'No' to changing
  the folder.